--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
     <Button
         android:id="@+id/btn_test_badge"
         android:layout_width="match_parent"
-        android:layout_height="144px"
-        android:layout_marginLeft="40px"
-        android:layout_marginRight="40px"
-        android:layout_marginTop="40px"
+        android:layout_height="@dimen/qb_px_144"
+        android:layout_marginLeft="@dimen/qb_px_40"
+        android:layout_marginRight="@dimen/qb_px_40"
+        android:layout_marginTop="@dimen/qb_px_40"
         android:background="@color/comment_person"
         android:text="应用脚标显示未读信息数"
+        android:textSize="16sp"
         android:textColor="@color/white0" />
 
 </RelativeLayout>
